--- a/desktop/app/views/index.ejs
+++ b/desktop/app/views/index.ejs
@@ -24,7 +24,7 @@
 		<script src="./assets/js/x-notify.js"></script>
 		<script src="./assets/js/api.js"></script>
 		<script src="./assets/js/main.js"></script>
-		<title>Cryptofolio</title>
+		<title>CENTCEX</title>
 	</head>
 	<body id="desktop">
 		<div class="titlebar loading">
@@ -37,12 +37,21 @@
 		</div>
 		<div class="app-content">
 			<div class="login-wrapper" id="login-wrapper">
-				<div>
-					<input id="login-api" type="text" placeholder="API URL...">
+				<div class="login-banner">
+					<img src="./assets/img/Banner.png" />
+				</div>
+				<div class="login-banner-text">
+					<span>
+						Stay on top of your portfolio Centcex's free crypto portfolio tracker! Track your crypto assets now.
+					</span>
+				</div>
+				<div class="login-form">
+					<input id="login-api" style="display: none;" value="https://app.centcex.finance/api/" type="text" placeholder="API URL...">
 					<input id="login-username" type="text" placeholder="Username...">
 					<input id="login-password" type="password" placeholder="Password...">
 					<button id="login-button">Login</button>
-					<button id="login-noapi-button">No-API Mode</button>
+					<button id="login-noapi-button" style="display: none;">No-API Mode</button>
+					<button id="new-account-button">Create Account</button>
 				</div>
 			</div>
 			<div class="loading-overlay active noselect" id="loading-overlay"><div class="loading-icon"><div></div><div></div></div></div>
@@ -303,7 +312,7 @@
 						<span class="title">Import ETH Tokens</span>
 					</div>
 					<div class="description noselect">
-						<span>Using Ethplorer, the current balance of the tokens in your ETH wallet can be imported into Cryptofolio. Your Ethereum token holdings would either get added to your current holdings, or would replace them depending on which option you choose. Tokens that aren't listed on CoinGecko would not get added.</span>
+						<span>Using Ethplorer, the current balance of the tokens in your ETH wallet can be imported into CENTCEX. Your Ethereum token holdings would either get added to your current holdings, or would replace them depending on which option you choose. Tokens that aren't listed on CoinGecko would not get added.</span>
 					</div>
 					<div class="bottom">
 						<input type="text" placeholder="ETH Address..." id="input-eth-address">
@@ -453,7 +462,7 @@
 						<span class="title">Donate</span>
 					</div>
 					<div class="description noselect">
-						<span>If you'd like to donate, then please feel free to do so, it'd be much appreciated. However, I don't want you to feel obliged to do so, and there are no perks for it. If you decide to donate, please contact me afterwards so I can actually thank you, and I'd love to hear about any ideas you may have for Cryptofolio. If they're within the scope of the project, I'll probably implement them.</span>
+						<span>If you'd like to donate, then please feel free to do so, it'd be much appreciated. However, I don't want you to feel obliged to do so, and there are no perks for it. If you decide to donate, please contact me afterwards so I can actually thank you, and I'd love to hear about any ideas you may have for CENTCEX. If they're within the scope of the project, I'll probably implement them.</span>
 					</div>
 					<div class="bottom">
 						<button class="submit inline donation-button" data-symbol="ADA">ADA</button>
