Fix: Holding, Chart

--- a/desktop/app/views/index.ejs
+++ b/desktop/app/views/index.ejs
@@ -24,7 +24,7 @@
 		<script src="./assets/js/x-notify.js"></script>
 		<script src="./assets/js/api.js"></script>
 		<script src="./assets/js/main.js"></script>
-		<title>CENTCEX</title>
+		<title>Centcex-Portfolio</title>
 	</head>
 	<body id="desktop">
 		<div class="titlebar loading">
@@ -312,7 +312,7 @@
 						<span class="title">Import ETH Tokens</span>
 					</div>
 					<div class="description noselect">
-						<span>Using Ethplorer, the current balance of the tokens in your ETH wallet can be imported into CENTCEX. Your Ethereum token holdings would either get added to your current holdings, or would replace them depending on which option you choose. Tokens that aren't listed on CoinGecko would not get added.</span>
+						<span>Using Ethplorer, the current balance of the tokens in your ETH wallet can be imported into Centcex-Portfolio. Your Ethereum token holdings would either get added to your current holdings, or would replace them depending on which option you choose. Tokens that aren't listed on CoinGecko would not get added.</span>
 					</div>
 					<div class="bottom">
 						<input type="text" placeholder="ETH Address..." id="input-eth-address">
@@ -457,12 +457,12 @@
 						<button class="submit inline" id="show-qr-code-button">Show QR Code</button>
 					</div>
 				</div>
-				<div class="section">
+				<div class="section" style="display: none;">
 					<div class="top noselect">
 						<span class="title">Donate</span>
 					</div>
 					<div class="description noselect">
-						<span>If you'd like to donate, then please feel free to do so, it'd be much appreciated. However, I don't want you to feel obliged to do so, and there are no perks for it. If you decide to donate, please contact me afterwards so I can actually thank you, and I'd love to hear about any ideas you may have for CENTCEX. If they're within the scope of the project, I'll probably implement them.</span>
+						<span>If you'd like to donate, then please feel free to do so, it'd be much appreciated. However, I don't want you to feel obliged to do so, and there are no perks for it. If you decide to donate, please contact me afterwards so I can actually thank you, and I'd love to hear about any ideas you may have for Centcex-Portfolio. If they're within the scope of the project, I'll probably implement them.</span>
 					</div>
 					<div class="bottom">
 						<button class="submit inline donation-button" data-symbol="ADA">ADA</button>
