--- a/mobile/android/app/src/main/res/values/styles.xml
+++ b/mobile/android/app/src/main/res/values/styles.xml
@@ -1,25 +1,10 @@
-<?xml
-  version="1.0"
-  encoding="UTF-8"
-  standalone="yes"
-?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:textColor">#000000</item>
     <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="android:windowTranslucentStatus">true</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
   </style>
-  <style name="Theme.App.SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
-    <!-- Below line is handled by '@expo/configure-splash-screen' command and it's discouraged to modify it manually -->
-    <!-- Customize your splash screen theme here -->
+  <style name="Theme.App.SplashScreen" parent="AppTheme">
     <item name="android:windowBackground">@drawable/splashscreen</item>
   </style>
-  <style name="Theme.FullScreenDialog">
-    <item name="android:windowNoTitle">true</item>
-	<item name="android:windowIsFloating">false</item>
-	<item name="android:windowBackground">@android:color/transparent</item>
-	<item name="android:statusBarColor">@android:color/transparent</item>
-	<item name="android:navigationBarColor">@android:color/transparent</item>
-  </style>
-
 </resources>
